# uwarl-test-suite

./: CMakeLists.txt  README.md  package.xml
courses/: test_course_1.world
courses/boxes/: box_course_1.world
courses/maps/: clvn_lounge.pgm  clvn_lounge.yaml  e7-3.pgm  e7-3.yaml  test_course_1_grid.pgm  test_course_1_grid.yaml
courses/models/: test_course_1.stl
courses/models/box_course_1/simple_box/: model.config  model.sdf
courses/models/box_course_1/simple_box/scripts/: repeated.material
courses/models/box_course_1/simple_cam_stand/: model.config  model.sdf
courses/models/test_course_1/: model.config  model.sdf
launch/: asm_launch.launch  turtle_test_1.launch  tutest1_launch.py
scripts/: test_1_pathing.py
src/: talker.cpp  test_2_pathing.cpp  test_echo.cpp
